--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="mt-7 flex">
             <!-- profile -->
             <a href="#home" class="">
-                <img src="/public/img/profil-1.png" alt="Muhammad Rizki"
+                <img src="public/img/profil-1.png" alt="Muhammad Rizki"
                     class="profil w-[50px] h-max mr-3 cursor-pointer shadow-xl shadow-black rounded-full">
             </a>
 
