--- a/index.html
+++ b/index.html
@@ -6,19 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammad Rizki - Home Page</title>
+
+    <meta name="description" content="Muhammad Rizki Official Website">
+    <meta name="keywords" content="muhammad rizki">
+    <meta name="author" content="Muhammad Rizki">
+    <meta itemprop="name" content="Muhammad Rizki - Homepage">
+    <meta itemprop="description" content="Muhammad Rizki Official Website">
+    <meta itemprop="image" content="https://mhdrizki.com/public/img/logo.png">
+ 
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://mhdrizki.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Muhammad Rizki - Homepage">
+    <meta property="og:description" content="Muhammad Rizki Official Website">
+    <meta property="og:image" content="https://mhdrizki.com/public/img/logo.png">
+ 
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Muhammad Rizki - Homepage">
+    <meta name="twitter:description" content="Muhammad Rizki Official Website">
+    <meta name="twitter:image" content="https://mhdrizki.com/public/img/logo.png">
+
+    <link rel="icon" type="image" href="public/img/logo.png">
+
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 
 <body class="bg-body" id="home">
     <!-- nav mobile -->
     <div class="nav-mobile bg-black-nav w-full fixed z-30 bottom-0 py-3 flex justify-evenly items-center md-768:hidden">
-        <a href="#about" class="text-black-list font-bold hover:text-white-primary">About</a>
+        <a href="#about" class="text-black-list text-sm font-bold hover:text-white-primary">About</a>
         <span class="bg-[#484e53] w-[1px] h-2"></span>
-        <a href="#skills" class="text-black-list font-bold hover:text-white-primary">Skills</a>
+        <a href="#skills" class="text-black-list text-sm font-bold hover:text-white-primary">Skills</a>
         <span class="bg-[#484e53] w-[1px] h-2"></span>
-        <a href="#portfolio" class="text-black-list font-bold hover:text-white-primary">Portfolio</a>
+        <a href="#portfolio" class="text-black-list text-sm font-bold hover:text-white-primary">Portfolio</a>
         <span class="bg-[#484e53] w-[1px] h-2"></span>
-        <a href="#contact" class="text-black-list font-bold hover:text-white-primary">Contact</a>
+        <a href="#contact" class="text-black-list text-sm font-bold hover:text-white-primary">Contact</a>
     </div>
 
     <!-- nav desktop -->
@@ -26,7 +49,7 @@
         <div class="mt-7 flex">
             <!-- profile -->
             <a href="#home" class="">
-                <img src="/public/img/profil-1.png" alt="Muhammad Rizki"
+                <img src="public/img/profil-1.png" alt="Muhammad Rizki"
                     class="profil w-[50px] h-max mr-3 cursor-pointer shadow-xl shadow-black rounded-full">
             </a>
 
@@ -56,9 +79,9 @@
                 <!-- section name -->
                 <div
                     class="flex justify-between items-center mt-7 md-768:mt-[13vw] lg-1000:mt-[130px] lg-1080:mt-[110px]">
-                    <p class="font-bold">Follow Me</p>
+                    <p class="w-[95px] font-bold">Find me on</p>
                     <span
-                        class="bg-white-primary w-[73%] h-[1px] sm-410:w-[78%] sm-450:w-[80%] sm-560:w-[84%] sm-650:w-[86%] md-768:w-[63%] md-860:w-[67%] lg-1000:w-[72%] lg-1080:w-[70%]"></span>
+                        class="bg-white-primary h-[1px] flex-[2] w-full"></span>
                 </div>
 
                 <!-- instagram -->
@@ -67,11 +90,11 @@
                     <p class="text-sm font-bold ml-3">Instagram</p>
                 </a>
 
-                <!-- linkedin -->
-                <a href="https://www.linkedin.com/in/muhammad-rizki-335851226/"
+                <!-- LinkedIn -->
+                <a href="https://www.LinkedIn.com/in/muhammad-rizki-335851226/"
                     class="flex items-center mt-2 md-950:mt-3">
                     <i class="fa-brands fa-linkedin-in"></i>
-                    <p class="text-sm font-bold ml-3">Linkedin</p>
+                    <p class="text-sm font-bold ml-3">LinkedIn</p>
                 </a>
 
                 <!-- github -->
@@ -236,16 +259,16 @@
                 <div class="flex">
                     <!-- button detail -->
                     <div
-                        class="card-portfolio bg-[#3243D8] w-[80px] h-[32px] mr-2 rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
+                        class="card-portfolio bg-[#25319F] hover:bg-[#3243D8] w-[80px] h-[32px] mr-2 rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
                         Detail</div>
                     <!-- button visit -->
                     <div
-                        class="no-link bg-[#20B84B] w-[80px] h-[32px] rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
+                        class="no-link bg-[#138A34] hover:bg-[#20B84B] w-[80px] h-[32px] rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
                         Visit</div>
                 </div>
             </div>
 
-            <!-- Muhammad Rizki Web Portfolio-->
+            <!-- MUHAMMAD RIZKI HOME PAGE-->
             <div class="w-[96%] mb-5 sm-560:w-[49%] md-860:w-[32%] md-860:mb-7">
                 <div class="bg-black-follow w-full mb-3 rounded-[10px] overflow-hidden relative">
                     <!-- poster -->
@@ -254,18 +277,18 @@
                     <!-- judul -->
                     <div
                         class="bg-[#15182bda] w-full h-[60px] absolute bottom-0 rounded-tr-[30px] flex items-center font-bold px-[6px]">
-                        MUHAMMAD RIZKI WEB PORTFOLIO</div>
+                        MUHAMMAD RIZKI HOME PAGE</div>
                 </div>
 
                 <!-- button -->
                 <div class="flex">
                     <!-- button detail -->
                     <div
-                        class="card-portfolio bg-[#3243D8] w-[80px] h-[32px] mr-2 rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
+                        class="card-portfolio bg-[#25319F] hover:bg-[#3243D8] w-[80px] h-[32px] mr-2 rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
                         Detail</div>
                     <!-- button visit -->
-                    <a href="https://mhdrizki.com/"
-                        class="bg-[#20B84B] w-[80px] h-[32px] rounded-[10px] flex justify-center items-center text-[12px] font-bold">Visit</a>
+                    <a target="_blank" href="https://mhdrizki.com/"
+                        class="bg-[#138A34] hover:bg-[#20B84B] w-[80px] h-[32px] rounded-[10px] flex justify-center items-center text-[12px] font-bold">Visit</a>
                 </div>
             </div>
 
@@ -310,7 +333,7 @@
                         <h2 class="text-black-list font-bold">Description</h2>
                         <i class="fas fa-sort-down text-xl -mt-3 text-black-list"></i>
                     </div>
-                    <p class="mx-3 mt-3 mb-7 text-justify md-768:mb-0"> Anisa Collection adalah sebuah website toko online yang menjual berbagai jenis pakaian, Anisa Collection dibangun dengan menggunakan framework Laravel dan untuk UI-nya menggunakan Tailwindcss. Anisa Collection masih dalam tahap pengembangan. 
+                    <p class="mx-3 mt-3 mb-7 text-justify leading-7 md-768:mb-0"> Anisa Collection adalah sebuah website toko online yang menjual berbagai jenis pakaian. 
                     </p>
                 </div>
 
@@ -318,13 +341,13 @@
                 <div class="w-full flex justify-end md-768:mt-5">
                     <div
                         class="no-link-detail cursor-pointer bg-black-follow w-[110px] h-[35px] rounded-[20px] flex justify-center items-center hover:bg-black-nav">
-                        <p class="text-[12px] font-bold">Visit</p>
+                        <p class="text-[12px] font-bold">Code</p>
                         <span class="bg-white-primary w-[25px] h-[1px] ml-1 mt-[1px]"></span>
                         <span class="bg-white-primary w-[6px] h-[6px] rounded-full ml-[3px]"></span>
                     </div>
 
                     <div
-                        class="close-detail-portfolio bg-black-follow w-[110px] h-[35px] rounded-[20px] flex justify-center items-center ml-2 cursor-pointer hover:bg-black-nav">
+                        class="close-detail-portfolio bg-[#6A2121] w-[110px] h-[35px] rounded-[20px] flex justify-center items-center ml-2 cursor-pointer hover:bg-[#AB3434]">
                         <p class="text-[12px] font-bold">Close</p>
                         <span class="bg-white-primary w-[25px] h-[1px] ml-1 mt-[1px]"></span>
                         <i class="fas fa-times text-[10px] ml-[3px]"></i>
@@ -342,7 +365,7 @@
     </div>
 
     <!-- detail portfolio -->
-    <!-- Muhammad Rizki Web Portfolio-->
+    <!-- MUHAMMAD RIZKI HOME PAGE-->
     <div
         class="detail-portfolio hidden bg-body fixed z-40 top-0 right-0 bottom-0 left-0 overflow-auto justify-center md-768:pt-7 md-768:overflow-hidden">
         <!-- container web name dan gambar -->
@@ -356,7 +379,7 @@
                         <h2 class="text-black-list font-bold">Web Name</h2>
                         <i class="fas fa-sort-down text-xl -mt-3 text-black-list"></i>
                     </div>
-                    <h1 class="font-bold mx-3 mt-3 mb-7">MUHAMMAD RIZKI WEB PORTFOLIO</h1>
+                    <h1 class="font-bold mx-3 mt-3 mb-7">MUHAMMAD RIZKI HOME PAGE</h1>
 
                     <!-- Technology -->
                     <div class="bg-black-nav w-full h-[35px] flex justify-between items-center px-3 rounded-[10px]">
@@ -373,23 +396,23 @@
                         <h2 class="text-black-list font-bold">Description</h2>
                         <i class="fas fa-sort-down text-xl -mt-3 text-black-list"></i>
                     </div>
-                    <p class="mx-3 mt-3 mb-7 text-justify md-768:mb-0">
-                        Muhammad Rizki Web Portfolio adalah sebuah Home Page yang menampilkan project yang talah saya
-                        buat sebagai Branding atas kemampuan saya dalam dunia Web Programming.
+                    <p class="mx-3 mt-3 mb-7 text-justify leading-7 md-768:mb-0">
+                        MUHAMMAD RIZKI HOME PAGE adalah sebuah Home Page yang menampilkan project yang talah saya
+                        bangun sebagai Branding atas kemampuan saya dalam dunia Web Programming.
                     </p>
                 </div>
 
                 <!-- visit, close -->
                 <div class="w-full flex justify-end md-768:mt-5">
-                    <a href="https://mhdrizki.com/"
+                    <a target="_blank" href="https://github.com/mhdky/muhammad-rizki-web-portfolio"
                         class="bg-black-follow w-[110px] h-[35px] rounded-[20px] flex justify-center items-center hover:bg-black-nav">
-                        <p class="text-[12px] font-bold">Visit</p>
+                        <p class="text-[12px] font-bold">Code</p>
                         <span class="bg-white-primary w-[25px] h-[1px] ml-1 mt-[1px]"></span>
                         <span class="bg-white-primary w-[6px] h-[6px] rounded-full ml-[3px]"></span>
                     </a>
 
                     <div
-                        class="close-detail-portfolio bg-black-follow w-[110px] h-[35px] rounded-[20px] flex justify-center items-center ml-2 cursor-pointer hover:bg-black-nav">
+                        class="close-detail-portfolio bg-[#6A2121] w-[110px] h-[35px] rounded-[20px] flex justify-center items-center ml-2 cursor-pointer hover:bg-[#AB3434]">
                         <p class="text-[12px] font-bold">Close</p>
                         <span class="bg-white-primary w-[25px] h-[1px] ml-1 mt-[1px]"></span>
                         <i class="fas fa-times text-[10px] ml-[3px]"></i>
@@ -400,26 +423,40 @@
             <!-- gambar -->
             <div
                 class="gambar w-full mt-10 pb-5 md-768:order-1 md-768:w-[45%] md-768:mr-5 md-768:mt-0 md-768:max-h-[90vh] md-768:overflow-auto md-768:pr-2 md-768:pl-2 md-768:pb-0">
-                <img src="public/img/muhammad-rizki-portfolio.png" alt="Anisa Collection" class="w-full">
+                <img src="public/img/muhammad-rizki-portfolio-detail.png" alt="Anisa Collection" class="w-full">
+                <br>
+                <img src="public/img/muhammad-rizki-portfolio-detail-2.png" alt="Anisa Collection" class="w-full">
             </div>
         </div>
     </div>
 
     <!-- no link portfolio -->
-    <div class="masih-pengembangan fixed z-50 top-0 right-0 bottom-0 left-0 hidden justify-center items-end">
+    <div class="masih-pengembangan fixed z-50 top-0 right-0 bottom-0 left-0 hidden justify-center items-end md-768:justify-start">
         <p
             class="masih-pengembangan-dua bg-white-primary text-black-about font-bold py-3 px-4 rounded-[20px] ml-3 mb-5">
             Masih dalam pengembangan!</p>
     </div>
 
     <!-- no link portfolio detail -->
-    <div class="masih-pengembangan-detail fixed z-50 top-0 right-0 bottom-0 left-0 hidden justify-center items-end">
+    <div class="masih-pengembangan-detail fixed z-50 top-0 right-0 bottom-0 left-0 hidden justify-center items-end md-768:justify-start">
         <p
             class="masih-pengembangan-dua-detail bg-white-primary text-black-about font-bold py-3 px-4 rounded-[20px] ml-3 mb-5">
             Masih dalam pengembangan!</p>
     </div>
 
-    <div class="py-20"></div>
+    <!-- contact and footer -->
+    <div class="bg-black-about w-full mt-12 pb-[49px] px-3 flex justify-center md-768:pb-0 md-768:mt-20" id="contact">
+        <div class="flex flex-col">
+            <ul class="w-full flex justify-center mt-6 mb-3">
+                <li class="mx-2 text-black-list font-bold hover:text-white-primary"><a href="https://instagram.com/rizki_sr_my">Instagram</a></li>
+                <li class="mx-2 text-black-list font-bold hover:text-white-primary"><a href="https://www.linkedin.com/in/muhammad-rizki-335851226/">LinkedIn</a></li>
+                <li class="mx-2 text-black-list font-bold hover:text-white-primary"><a href="https://github.com/mhdky">Github</a></li>
+                <li class="mx-2 text-black-list font-bold hover:text-white-primary"><a href="mailto:mhdky502@gmail.com">E-Mail</a></li>
+            </ul>
+
+            <p class="w-full flex justify-center items-center mb-6 text-[12px] text-[#47474B] font-bold text-center">© <span class="text-[12px] text-[#47474B] font-bold mx-0.5" id="copyright"></span> Muhammad Rizki. All rights reserved</p>
+        </div>
+    </div>
 
     <script src="public/js/script.js"></script>
     <script src="https://kit.fontawesome.com/209072fbdb.js" crossorigin="anonymous"></script>
