--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- profile -->
             <a href="#home" class="">
                 <img src="public/img/profil-1.png" alt="Muhammad Rizki"
-                    class="profil w-[50px] h-max mr-3 cursor-pointer shadow-xl shadow-black rounded-full">
+                    class="profil w-[50px] h-max mr-3 cursor-pointer rounded-full">
             </a>
 
             <!-- list nav -->
