--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         class="card-portfolio bg-[#25319F] hover:bg-[#3243D8] w-[80px] h-[32px] mr-2 rounded-[10px] flex justify-center items-center text-[12px] font-bold cursor-pointer">
                         Detail</div>
                     <!-- button visit -->
-                    <a target="_blank" href="https://mhdrizki.com/"
+                    <a target="_blank" href="https://mhdky.github.io/muhammad-rizki-web-portfolio/"
                         class="bg-[#138A34] hover:bg-[#20B84B] w-[80px] h-[32px] rounded-[10px] flex justify-center items-center text-[12px] font-bold">Visit</a>
                 </div>
             </div>
