--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
         </div>
     </div>
 
+    <script>window.location = 'https://mhdrizki.com'</script>
     <script src="public/js/script.js"></script>
     <script src="https://kit.fontawesome.com/209072fbdb.js" crossorigin="anonymous"></script>
 </body>
